--- a/frontend/src/app/component/login/login.html
+++ b/frontend/src/app/component/login/login.html
@@ -1,8 +1,8 @@
 <form (ngSubmit)="onSubmit()" #loginForm="ngForm" class="form-container">
   <h2>Bejelentkezés</h2>
   <div class="form-group">
-    <label for="email">Email vagy felhasználónév</label>
-    <input type="text" id="email" name="email" [(ngModel)]="email" required placeholder="Add meg az email címed vagy felhasználóneved"
+    <label for="username">Felhasználónév</label>
+    <input type="text" id="username" name="username" [(ngModel)]="username" required placeholder="Add meg a felhasználóneved"
     />
   </div>
   <div class="form-group">
