Az összes klán lekérése, frontenden megjelenítése id alapu klán lekérés kész.
Szerkesztés, törlés, a belépés gombbal való mókolás (a belépés gomb, ahhoz kell backend is) A "clan-details-container" egy modal, arra még css kell. A createclan teljesen kész, esetleg a styling kerül még változtatásra.

--- a/frontend/src/app/component/clans/clans.html
+++ b/frontend/src/app/component/clans/clans.html
@@ -1,3 +1,6 @@
-<p>clans works!</p>
-<p routerLink="/fooldal">fooldal</p>
-<p routerLink="/createclan">createclan</p>
+<div class="clans-container">
+  
+</div>
+<div class="clan-details-container">
+
+</div>
