--- a/frontend/src/app/component/createclan/createclan.html
+++ b/frontend/src/app/component/createclan/createclan.html
@@ -1,12 +1,19 @@
 <p>createclan works!</p>
 <p routerLink="/fooldal">fooldal</p>
 <form (ngSubmit)="onSubmit()" #createclanForm="ngForm" class="form-container">
-        <label for="clanName">clanName</label>
-        <input type="text" name="clanName" id="clanName" [(ngModel)]="clanname" required >
-        <label for="game">Game</label>
-        <input type="text" name="game" id="game" [(ngModel)]="gamename" required>
-        <label for="description">description</label>
-        <textarea name="description" id="description" [(ngModel)]="description" required></textarea>
+        <div>
+            <label for="clanName">clanName</label>
+            <input type="text" name="clanName" id="clanName" [(ngModel)]="clanname" required >
+        </div>
+        <div>
+            <label for="game">Game</label>
+            <input type="text" name="game" id="game"  required>
+            <input type="hidden" id="gameId" name="gameId">
+        </div>
+        <div>
+            <label for="description">description</label>
+            <textarea name="description" id="description" [(ngModel)]="description" required></textarea>
+        </div>
         <input type="submit" value="Create Clan" id="createClanBtn" [disabled]="!createclanForm.form.valid" >
     </form>
     <input type="submit" value="logout" id="logout" name="logout">
