--- a/frontend/src/app/component/fooldal/fooldal.html
+++ b/frontend/src/app/component/fooldal/fooldal.html
@@ -1,1 +1,14 @@
-<p>fooldal works!</p>
+<div class="udvozlo">
+    <!-- Üdvözlő div helye az oldal tetején -->
+
+</div>
+<div class="nepszeru-div">
+    <div class="nepszeru-jatekok">
+        Népszerű játékok
+        <!-- ide töltődnek be a játékok a backendről -->
+    </div>
+    <div class="nepszeru-klanok">
+        Népszerű Klánok
+        <!-- ide töltődnek be a népszerű klánok a backendről -->
+    </div>
+</div>
