--- a/frontend/src/app/component/navbar/navbar.html
+++ b/frontend/src/app/component/navbar/navbar.html
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav" id="navbar-ul">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="/fooldal">Főoldal</a>
         </li>
