--- a/frontend/src/app/component/message/message.html
+++ b/frontend/src/app/component/message/message.html
@@ -1,10 +1,10 @@
 
 <div class="chat-container">
     <div class="chat-header">
-        <h2>Klán üzenetek (ID: {{clanId}})</h2>
+        <h2>{{ clanName }} chat</h2>
     </div>
 
-    <div class="message-list" #scrollMe [scrollTop]="scrollMe.scrollHeight">
+    <div class="message-list" #scrollMe>
         <div *ngFor="let msg of messages" class="message-item">
             <div class="message-meta">
                 <span class="sender">{{ msg.sender }}</span>
