--- a/frontend/src/app/component/clans/clans.css
+++ b/frontend/src/app/component/clans/clans.css
@@ -1,13 +1,24 @@
 .clans-container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
     padding: 20px;
 }
-
-.clan-details-container{
-
+.clan-details-container {
+    background-color: rgba(15, 23, 36, 0.95);
+    border: 1px solid rgba(0, 243, 255, 0.1);
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(5px);
+    color: #E0F7FA;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 .modal-overlay {
@@ -35,7 +46,7 @@
 
 .modal-content h2 {
     margin-top: 0;
-    color: #333;
+    color: white;
 }
 
 .modal-content form div {
