--- a/frontend/src/app/component/profile/profile.html
+++ b/frontend/src/app/component/profile/profile.html
@@ -1,11 +1,9 @@
 <div class="profile-container">
-    <h2 *ngIf="isEditing">Profil szerkesztése</h2>
-
     <div *ngIf="!isEditing" class="profile-view" style="text-align: center; margin-bottom: 20px;">
         <div class="profile-image-container" style="margin-bottom: 15px;">
             <img [src]="profilePictureUrl" alt="Profilkép" style="max-width: 200px; max-height: 200px; border-radius: 50%; object-fit: cover;">
         </div>
-        <h3>{{ username }}</h3>
+        <h3 class="username">{{ username }}</h3>
         <p>{{ email }}</p>
         <button class="btn btn-primary" (click)="toggleEditMode()">Profil szerkesztése</button>
     </div>
@@ -40,6 +38,6 @@
             <input type="password" id="confirm_new_password" name="confirm_new_password" [(ngModel)]="confirm_new_password">
         </div>
         <button type="button" class="btn btn-primary" id="update_user_button" (click)="updateProfile()">Mentés</button>
-        <button type="button" class="btn btn-secondary" (click)="toggleEditMode()" style="margin-left: 10px;">Mégse</button>
+        <button type="button" class="btn btn-secondary" (click)="toggleEditMode()" style="margin-left: 25%;">Mégse</button>
     </form>
 </div>
