--- a/frontend/src/app/component/clans/clans.css
+++ b/frontend/src/app/component/clans/clans.css
@@ -60,8 +60,13 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    max-width: 500px;
+    width: fit-content !important;
+    min-width: 50vw;
+    max-width: 95vw !important;
     margin: 0 auto;
+}
+.clan-card-body{
+    width: 80%;
 }
 
 @property --gradient-angle {
@@ -112,7 +117,7 @@
     border-radius: 8px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.6);
     text-align: center;
-    max-width: 400px;
+    max-width: 600px;
     width: 90%;
     border: 1px solid rgba(0, 243, 255, 0.1);
     backdrop-filter: blur(5px);
@@ -233,4 +238,17 @@
 
 .members-table tr:hover {
     background-color: rgba(0, 243, 255, 0.05);
+}
+
+.buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 20px;
+}
+
+.buttons button {
+    width: auto;
+    margin: 0;
 }
