Főoldal készen van. Navbar módosítása megtörtént , service-k bővítése, environment-ben upload URL hozzáadása
az upload url azért kell, mert amikor lekérünk egy képet akár a főoldalon, akár a profil oldalon, ha telefonon futtatjuk, mindenhol át kellene írni a számítógép ip címét, így viszont csak egy helyre kell beírni.

--- a/frontend/src/app/component/fooldal/fooldal.html
+++ b/frontend/src/app/component/fooldal/fooldal.html
@@ -1,14 +1,15 @@
-<div class="udvozlo">
-    <!-- Üdvözlő div helye az oldal tetején -->
-
+<div class="welcome-header">
+    <h1>Üdvözöljük a ClanVerse oldalán!</h1>
+    <p class="welcome-subtitle">Egy hely, ahol a játékosok találkoznak, csapatok születnek, és közös célok formálódnak.<br>A klánok nemcsak a győzelemről szólnak, hanem a fejlődésről, az együttműködésről és az élményekről.</p>
+    <p class="welcome-subtitle call-to-action">Készen állsz a kalandra? Csatlakozz egy klánhoz, vagy hozd létre a sajátodat, és formáld te a játék jövőjét!</p>
 </div>
 <div class="nepszeru-div">
     <div class="nepszeru-jatekok">
-        Népszerű játékok
+        <h2>Népszerű Játékok</h2>
         <!-- ide töltődnek be a játékok a backendről -->
     </div>
     <div class="nepszeru-klanok">
-        Népszerű Klánok
+        <h2>Népszerű Klánok</h2>
         <!-- ide töltődnek be a népszerű klánok a backendről -->
     </div>
 </div>
