--- a/frontend/src/app/component/clans/clans.css
+++ b/frontend/src/app/component/clans/clans.css
@@ -68,7 +68,9 @@
 .clan-card-body{
     width: 80%;
 }
-
+.clan-card-body img.card-img-top{
+    width: 25%;
+}
 @property --gradient-angle {
     syntax: "<angle>";
     inherits: false;
